@@ -1,5 +1,6 @@
 Version 6.8.0
 - Added support for `%"xyzw"` constants in Spin2
+- Added locking for host file system I/O
 - Fixed incorrect inline assembly for `#outb` and other hw registers
 - Supported PNut v43 `{Spin2_vNN}` version comments
 
